@@ -28,6 +28,7 @@ AC_SEARCH_LIBS(pcre_compile, pcre)
 if test "$ac_cv_search_pcre_compile" = "no"; then
   AC_MSG_ERROR([cannot find PCRE library])
 fi
+AC_CHECK_FUNCS(pcre_get_stringnumber)
 
 AC_MSG_NOTICE([ * PCRE (Output)])
 AC_CONFIG_FILES(Makefile link.sh)
